# CLIs_typer

./: exemplo_01.py  exemplo_02.py  exemplo_03.py  exemplo_04.py  pyproject.toml
