[tool.poetry]
name = "clis-typer"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "clis_typer"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
